--- a/Door/door.html
+++ b/Door/door.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;800&display=swap" rel="stylesheet">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body { height: 100%; }
@@ -44,7 +46,7 @@
 
     .header-row {
       position: relative;
-      margin-bottom: 4px;
+      margin-bottom: 14px;
       padding: 0 42px;
       display: flex;
       justify-content: center;
@@ -101,11 +103,15 @@
 
     /* WiFi / LoRa 모드 선택 버튼 */
     .mode-switch {
+      margin-top: 6px;
       display: flex;
+      align-items: center;
+      justify-content: space-between;
       gap: 8px;
       margin-bottom: 8px;
-      justify-content: flex-start;
     }
+    .mode-switch-left { display: flex; gap: 8px; }
+    .mode-switch-right { margin-left: auto; }
     .mode-btn {
       padding: 4px 14px;
       font-size: 0.8rem;
@@ -170,7 +176,14 @@
       font-size: 0.8rem;
     }
     .status-text-group { display: flex; flex-direction: column; gap: 4px; }
-    .status-line { display: flex; align-items: center; gap: 6px; }
+    .status-line { display: flex; align-items: center; justify-content: space-between; gap: 10px; }
+    .status-left { display: flex; align-items: center; gap: 6px; }
+    .status-right { display: flex; align-items: center; gap: 6px; white-space: nowrap; }
+    .inline-value { font-size: 0.8rem; font-weight: 1000; color: #111827; }
+    
+    /* Thin value style for lux + threshold numbers (per UI request) */
+    #lux-node, #lux-gw, #threshold-node, #threshold-gw { font-weight: 300 !important; }
+body.night-mode .inline-value { color: #e5e7eb; }
     .status-label { font-size: 0.8rem; color: #444; }
     body.night-mode .status-label { color: #9ca3af; }
 
@@ -194,9 +207,9 @@
     }
 
     .reset-btn {
-      padding: 6px 14px;
-      font-size: 0.78rem;
-      font-weight: 700;
+      padding: 4px 14px;
+      font-size: 0.8rem;
+      font-weight: 1000;
       border-radius: 999px;
       border: 1px solid #ef4444;
       cursor: pointer;
@@ -259,14 +272,16 @@
     .led-btn {
       display: inline-block;
       width: 100%;
-      padding: 34px 26px;
-      font-family: "Georgia", "Times New Roman", serif;
-      font-size: 2rem;
-      font-weight: 800;
+      padding: 46px 28px;
+      font-family: system-ui, -apple-system, "SF Pro Display", "Apple SD Gothic Neo", "Segoe UI Variable", "Segoe UI", "Noto Sans KR", sans-serif;
+      font-size: 2.30rem;
+      font-weight: 400;
+      font-variation-settings: "wght" 400;
+      font-synthesis: none;
       border-radius: 24px;
       border: none;
       cursor: pointer;
-      background: linear-gradient(145deg, #4f8ff9, #1d4ed8);
+      background: #16a34a;
       color: #fff;
       box-shadow:
         0 8px 16px rgba(15, 23, 42, 0.4),
@@ -277,9 +292,10 @@
         opacity 0.1s ease,
         background 0.2s ease,
         filter 0.2s ease;
+      letter-spacing: 0.3px;
     }
     .led-btn:hover {
-      background: linear-gradient(145deg, #3b82f6, #1d4ed8);
+      background: #15803d;
     }
     .led-btn:active {
       transform: translateY(2px);
@@ -295,7 +311,7 @@
         0 12px 20px rgba(15, 23, 42, 0.6);
     }
     body.night-mode .led-btn {
-      background: linear-gradient(145deg, #1d4ed8, #1e3a8a);
+      background: #16a34a;
       box-shadow:
         0 8px 18px rgba(15, 23, 42, 0.85),
         inset 0 2px 3px rgba(255, 255, 255, 0.08);
@@ -306,28 +322,49 @@
         0 12px 22px rgba(15, 23, 42, 0.95);
     }
 
+    .door-state-window {
+      background: rgba(255,255,255,0.58);
+      border: 1px solid rgba(17, 24, 39, 0.10);
+      border-radius: 18px;
+      padding: 10px 12px;
+      margin-top: 6px;
+      margin-bottom: 12px;
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.65),
+        0 6px 14px rgba(15, 23, 42, 0.10);
+    }
+    body.night-mode .door-state-window {
+      background: rgba(2, 6, 23, 0.55);
+      border: 1px solid rgba(148, 163, 184, 0.22);
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.06),
+        0 10px 22px rgba(0,0,0,0.45);
+    }
+
     .door-state-row {
-      margin-top: 14px;
+      margin-top: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 10px;
-      font-size: 1.02rem;
+      font-size: 1.14rem;
+      font-family: system-ui, -apple-system, "SF Pro Display", "Apple SD Gothic Neo", "Segoe UI Variable", "Segoe UI", "Noto Sans KR", sans-serif;
+      font-weight: 300;
+      letter-spacing: 0.2px;
     }
-    .door-label { font-weight: 700; }
+    .door-label { font-weight: 400;}
 
     .door-state-badge {
       min-width: 80px;
       text-align: center;
       padding: 4px 14px;
-      border-radius: 12px;
-      font-weight: 700;
+      border-radius: 12px;`0;
       color: #ffffff;
       background: #374151;
     }
-    .door-state-badge.door-open { background: #0b8f2f; }
+    .door-state-badge.door-open { background: #2563eb; }
     .door-state-badge.door-close { background: #374151; }
-    body.night-mode .door-state-badge.door-open { background: #16a34a; }
+    body.night-mode .door-state-badge.door-open { background: #2563eb; }
 
     .footer {
       margin-top: 6px;
@@ -360,7 +397,10 @@
       body { padding: 8px 6px; }
       .container { max-width: 100%; border-radius: 14px; }
     }
-  </style>
+  
+    /* Ensure Open/Close button weight */
+    .led-btn { font-weight: 400 !important; }
+</style>
 
   <!-- PWA -->
   <link rel="manifest" href="./manifest.webmanifest">
@@ -376,46 +416,60 @@
       <div class="title">Door Control</div>
       <button id="mode-toggle-btn" class="mode-toggle-btn" aria-label="Toggle day/night mode">🌙</button>
     </div>
-    <div class="subtitle">Node &amp; Gateway Dashboard (HiveMQ)</div>
-
     <div class="mode-switch">
-      <button id="btn-wifi" class="mode-btn active">WiFi</button>
-      <button id="btn-lora" class="mode-btn">LoRa</button>
+      <div class="mode-switch-left">
+        <button id="btn-wifi" class="mode-btn active">WiFi</button>
+        <button id="btn-lora" class="mode-btn">LoRa</button>
+      </div>
+      <div class="mode-switch-right">
+        <!-- ✅ RESET: WiFi/LoRa 버튼 라인 우측 끝 -->
+        <button id="reset-btn-node" class="reset-btn">RESET</button>
+        <button id="reset-btn-gw" class="reset-btn" style="display:none;">RESET</button>
+      </div>
     </div>
+
+    <div class="divider"></div>
 
     <!-- WiFi 패널 -->
     <div id="wifi-panel">
       <div class="card">
-        <div class="status-row">
-          <div class="status-text-group">
-            <div class="status-line">
+        <div class="status-text-group">
+          <!-- ✅ 밝기 + lux 값: MQTT 라인 우측 끝 / MQTT와 같은 폰트 -->
+          <div class="status-line">
+            <div class="status-left">
               <span class="status-label">MQTT:</span>
               <span id="mqtt-status-node" class="status-pill bad">연결 안 됨</span>
             </div>
-            <div class="status-line">
+            <div class="status-right">
+              <span class="status-label">밝기[lx]:</span>
+              <span id="lux-node" class="inline-value">-</span>
+            </div>
+          </div>
+
+          <!-- ✅ Open 기준(lx): 장비상태 라인 우측 끝 / 장비상태와 같은 폰트 -->
+          <div class="status-line">
+            <div class="status-left">
               <span class="status-label">장비상태:</span>
               <span id="device-status-node" class="status-pill bad">데이터 없음</span>
             </div>
+            <div class="status-right">
+              <span class="status-label">Open 기준(lx):</span>
+              <span id="threshold-node" class="inline-value">-</span>
+            </div>
           </div>
-          <button id="reset-btn-node" class="reset-btn">RESET</button>
         </div>
       </div>
 
       <div class="card">
-        <div class="lux-label">밝기</div>
-        <div id="lux-node" class="lux-value">- [lx]</div>
-        <div class="threshold-row">
-          <span>Open 기준(lx): <strong id="threshold-node">-</strong></span>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="button-wrap">
-          <button id="led-btn-node" class="led-btn">Open/Close</button>
-        </div>
-        <div class="door-state-row">
+        <!-- ✅ Door상태(로보토/사이즈 업): 버튼 위로 이동 -->
+        <div class="door-state-window">
+          <div class="door-state-row">
           <span class="door-label">Door상태</span>
           <span id="door-state-node" class="door-state-badge door-close">Close</span>
+        </div>
+        </div>
+        <div class="button-wrap">
+          <button id="led-btn-node" class="led-btn">Open/Close</button>
         </div>
       </div>
 
@@ -431,41 +485,46 @@
       </div>
     </div>
 
-    <div class="divider"></div>
-
     <!-- LoRa 패널 -->
     <div id="lora-panel">
       <div class="card">
-        <div class="status-row">
-          <div class="status-text-group">
-            <div class="status-line">
+        <div class="status-text-group">
+          <!-- ✅ 밝기 + lux 값: MQTT 라인 우측 끝 / MQTT와 같은 폰트 -->
+          <div class="status-line">
+            <div class="status-left">
               <span class="status-label">MQTT:</span>
               <span id="mqtt-status-gw" class="status-pill bad">연결 안 됨</span>
             </div>
-            <div class="status-line">
+            <div class="status-right">
+              <span class="status-label">밝기[lx]:</span>
+              <span id="lux-gw" class="inline-value">-</span>
+            </div>
+          </div>
+
+          <!-- ✅ Open 기준(lx): 장비상태 라인 우측 끝 / 장비상태와 같은 폰트 -->
+          <div class="status-line">
+            <div class="status-left">
               <span class="status-label">장비상태:</span>
               <span id="device-status-gw" class="status-pill bad">데이터 없음</span>
             </div>
+            <div class="status-right">
+              <span class="status-label">Open 기준(lx):</span>
+              <span id="threshold-gw" class="inline-value">-</span>
+            </div>
           </div>
-          <button id="reset-btn-gw" class="reset-btn">RESET</button>
         </div>
       </div>
 
       <div class="card">
-        <div class="lux-label">밝기</div>
-        <div id="lux-gw" class="lux-value">- [lx]</div>
-        <div class="threshold-row">
-          <span>Open 기준(lx): <strong id="threshold-gw">-</strong></span>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="button-wrap">
-          <button id="led-btn-gw" class="led-btn">Open/Close</button>
-        </div>
-        <div class="door-state-row">
+        <!-- ✅ Door상태(로보토/사이즈 업): 버튼 위로 이동 -->
+        <div class="door-state-window">
+          <div class="door-state-row">
           <span class="door-label">Door상태</span>
           <span id="door-state-gw" class="door-state-badge door-close">Close</span>
+        </div>
+        </div>
+        <div class="button-wrap">
+          <button id="led-btn-gw" class="led-btn">Open/Close</button>
         </div>
       </div>
 
@@ -612,12 +671,18 @@
       loraPanel.style.display = "none";
       btnWifi.classList.add("active");
       btnLora.classList.remove("active");
+      // ✅ RESET 버튼: WiFi/LoRa에 따라 노출
+      resetBtnNode.style.display = "";
+      resetBtnGw.style.display   = "none";
     }
     function showLora() {
       wifiPanel.style.display = "none";
       loraPanel.style.display = "block";
       btnWifi.classList.remove("active");
       btnLora.classList.add("active");
+      // ✅ RESET 버튼: WiFi/LoRa에 따라 노출
+      resetBtnNode.style.display = "none";
+      resetBtnGw.style.display   = "";
     }
     btnWifi.addEventListener("click", showWifi);
     btnLora.addEventListener("click", showLora);
@@ -637,10 +702,10 @@
         const v = parseFloat(payload);
         if (!isNaN(v)) {
           const iv = Math.round(v);
-          luxNodeEl.textContent = iv + " [lx]";
+          luxNodeEl.textContent = iv;
           if (luxThreshold != null) updateDoorNode(iv > luxThreshold);
         } else {
-          luxNodeEl.textContent = payload + " [lx]";
+          luxNodeEl.textContent = payload;
         }
         lastDataNode = Date.now();
         updateDeviceStatusNode();
@@ -660,10 +725,10 @@
         const v = parseFloat(payload);
         if (!isNaN(v)) {
           const iv = Math.round(v);
-          luxGwEl.textContent = iv + " [lx]";
+          luxGwEl.textContent = iv;
           if (luxThreshold != null) updateDoorGw(iv > luxThreshold);
         } else {
-          luxGwEl.textContent = payload + " [lx]";
+          luxGwEl.textContent = payload;
         }
         lastDataGw = Date.now();
         updateDeviceStatusGw();
